# edu-elfin_simulation

./: Dockerfile  LICENSE  README.md  build_docker.sh
arm_controllers/src/: computed_torque_controller.cpp
eigen_kdl_examples/: CMakeLists.txt  package.xml  readme.md
elfin/elfin_description/urdf/: elfin3.urdf.xacro
elfin/elfin_gazebo/launch/: elfin3_experiment1_world.launch  elfin3_no_fric_no_joint_limit_world.launch
elfin/elfin_gazebo/launch/gravity_comp_controller_perspective/: joint1_effort.perspective  joint1_error.perspective  joint1_state.perspective  joint2_effort.perspective  joint2_error.perspective  joint2_state.perspective  joint3_effort.perspective  joint3_error.perspective  joint3_state.perspective  joint4_effort.perspective  joint4_error.perspective  joint4_state.perspective  joint5_effort.perspective  joint5_error.perspective  joint5_state.perspective  joint6_effort.perspective  joint6_error.perspective  joint6_state.perspective  tuning.perspective
elfin/elfin_gazebo/launch/passivity_controller_perspective/: joint1_effort.perspective  joint1_error.perspective  joint1_state.perspective  joint2_effort.perspective  joint2_error.perspective  joint2_state.perspective  joint3_effort.perspective  joint3_error.perspective  joint3_state.perspective  joint4_effort.perspective  joint4_error.perspective  joint4_state.perspective  joint5_effort.perspective  joint5_error.perspective  joint5_state.perspective  joint6_effort.perspective  joint6_error.perspective  joint6_state.perspective  tuning.perspective
(+12 files in other folders)
